      URL to serve-branches. (Jelmer Vernooij, #371787)

    - Fix internal server errors when using start-loggerhead. (Matt
      Nordhoff, #375948)

    - Fix annotating non-UTF-8 files when Pygments is disabled. (Matt
      Nordhoff, #376957)

    - Fix 'bzr serve --http' errors. (Matt Nordhoff, #377551)

    - Fix serving branches over HTTP. (Matt Nordhoff, Jelmer Vernooij,
      #380026)

1.10 [22Dec2008]
---------------

    - Add startup deamon script for Linux (Marius Kruger)

    - Switch navigation from file_ids to paths. Fixes bugs #260363,
      #269365 and #128926. (Martin Albisetti)

    - Fix bug #258710 ("the /files page explodes in an empty branch").
      Also minor improvements to the /files and /changes pages.
      (Marius Kruger)

    - Added --port, --host and --prefix options to serve-branches
      script. (Martin Albisetti)

    - Fixed broken template for project browsing with start-loggerhead
      (Martin Albisetti)

    - Added --reload options to restart the application when a python
      file change. (Guillermo Gonzalez)

    - Added error handling middleware. (Guillermo Gonzalez)

    - Fix bug #243415 ("Tracebacks go to console but not log
      file"). Also minor improvements to logging in serve-branches and
      start-loggerhead. (Guillermo Gonzalez)

1.6 [15Aug2008]
----------------

    - Download a diffs between revisions. (Martin Albisetti)

    - Modified templates to make loggerhead's theme easier to
      change. (Paul Hummer)

    - Default sqlite interface is now sqlite3. (Robert Collins)

    - New ninja theme sponsored by Canonical (Martin Albisetti)

    - Added COPYING file and clarified copyright headers (John Arbash Meinel)

    - Remove the .py extension requiered by the Debian Policy.
      (Jelmer Vernooij)

    - New startup script serve-branches will serve Loggerhead without
      the need of configuration, and allow you to browse through directories
      and branches. (Michael Hudson)
